# auto-fanban-pre

backend/: .gitignore  DEVELOPMENT_GUIDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.bat  setup_env.ps1
backend/src/: __init__.py  interfaces.py
backend/src/cad/: __init__.py  a4_multipage.py  frame_detector.py  oda_converter.py  splitter.py  titleblock_extractor.py
backend/src/cad/detection/: __init__.py  anchor_first_locator.py  anchor_validator.py  candidate_finder.py  paper_fitter.py
backend/src/config/: __init__.py  runtime_config.py  spec_loader.py
backend/src/doc_gen/: __init__.py  catalog.py  cover.py  derivation.py  design.py  ied.py  pdf_engine.py
backend/src/models/: __init__.py  doc_context.py  frame.py  job.py  sheet_set.py
backend/src/pipeline/: __init__.py  executor.py  job_manager.py  packager.py  stages.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: __init__.py  test_config.py  test_derivation.py  test_models.py
documents/: A4特殊逻辑.md  CNPE_titleblock_runtime_config_v1.yaml.bak  _tmp_ied_sheet2_fill_guide.tsv  _tmp_template_scan_report.json  catalog_template_pagination_1818.json  catalog_template_pagination_common.json  dxf_roi_test_report_A0.json  dxf_roi_test_report_A0_debug.json  dxf_roi_test_report_A0_summary.json  dxf_roi_test_report_frameset.json  dxf_roi_test_report_titleblock.json  template_scan_report.json  主体架构.md  主体架构_风险与遗漏审阅.md  主体架构总汇总 - 新.md  主体架构总汇总.md  参数表.md  参数规范-old.yaml  参数规范.yaml  参数规范.yaml.bak  参数规范.yaml.bak2  参数规范_运行期.yaml  工具列表.yaml  计划.md  (+2 more)
(+70 files in other folders)
